# endstone-broadcaster

./: .gitignore  LICENSE  README.md  pyproject.toml
src/endstone_broadcaster/: __init__.py  manager.py  plugin.py
